# rust-crypto-decoupled

./: README.md  convert_tests.py
blowfish/: Cargo.toml
blowfish/src/: bench.rs  lib.rs
etc/bcrypt/: Cargo.toml
etc/bcrypt/src/: bench.rs  lib.rs  tests.rs
etc/curve25519/: Cargo.toml
etc/curve25519/src/: lib.rs  tests.rs
etc/ed25519/: Cargo.toml
etc/ed25519/src/: lib.rs  tests.rs
etc/ghash/: Cargo.toml
etc/poly1305/: Cargo.toml
etc/poly1305/src/: tests.rs
ghash/: Cargo.toml
ghash/src/: bench.rs  lib.rs  tests.rs
hash/: test_hashes.sh
hash/blake2/: Cargo.toml
hash/blake2/examples/: blake2b512sum.rs  blake2s256sum.rs
hash/blake2/src/: bench.rs  blake2b.rs  blake2s.rs  lib.rs  tests.rs
hash/md4/: Cargo.toml  LICENSE-MIT
hash/md4/src/: lib.rs
hash/md5/: Cargo.toml
hash/md5/benches/: mod.rs
hash/md5/src/: consts.rs  lib.rs  tests.rs
hash/md5/tests/: mod.rs
hash/ripemd160/: Cargo.toml
hash/ripemd160/benches/: bench.rs
hash/ripemd160/src/: bench.rs  lib.rs  tests.rs
hash/ripemd160/tests/: tests.rs
hash/sha1/: Cargo.toml
hash/sha1/benches/: mod.rs
hash/sha1/src/: lib.rs  tests.rs
hash/sha1/tests/: mod.rs
hash/sha2/: Cargo.toml
hash/sha2/benches/: mod.rs
hash/sha2/src/: bench.rs  consts.rs  lib.rs  sha256.rs  sha512.rs  tests.rs
hash/sha2/tests/: mod.rs
hash/sha3/: Cargo.toml
hash/sha3/src/: bench.rs  keccak.rs  lib.rs  tests.rs
hash/whirlpool/: Cargo.toml
hash/whirlpool/benches/: mod.rs
hash/whirlpool/src/: bench.rs  lib.rs  tests.rs
hash/whirlpool/tests/: mod.rs
md5/: Cargo.toml
md5/src/: bench.rs  lib.rs  tests.rs
meta/crypto/: Cargo.toml
meta/crypto-hashes/: Cargo.toml
meta/crypto-hashes/src/: lib.rs
meta/crypto/src/: lib.rs
meta/symmetric-ciphers/: Cargo.toml
meta/symmetric-ciphers/src/: lib.rs
poly1305/: Cargo.toml
poly1305/src/: bench.rs  lib.rs  tests.rs
rc4/: Cargo.toml
rc4/src/: lib.rs
ripemd160/: Cargo.toml
ripemd160/src/: lib.rs  tests.rs
rust-crypto/: Cargo.toml
rust-crypto/src/: lib.rs
sha1/: Cargo.toml
sha1/src/: bench.rs  lib.rs  tests.rs
sha2/: Cargo.toml
sha2/src/: lib.rs  tests.rs
sha3/: Cargo.toml
sha3/src/: keccak.rs  lib.rs  tests.rs
simd/src/: lib.rs  sixty_four.rs
sosemanuk/: Cargo.toml
sosemanuk/src/: bench.rs  tests.rs
symmetric/blowfish/: Cargo.toml
symmetric/blowfish/src/: lib.rs  tests.rs
symmetric/chacha20/: Cargo.toml
symmetric/chacha20/src/: bench.rs  lib.rs  tests.rs
symmetric/chacha20poly1305/: Cargo.toml
symmetric/chacha20poly1305/src/: bench.rs  lib.rs  tests.rs
symmetric/hc128/: Cargo.toml
symmetric/hc128/src/: bench.rs  lib.rs  tests.rs
symmetric/rc4/: Cargo.toml
symmetric/rc4/src/: bench.rs  tests.rs
symmetric/salsa20/: Cargo.toml
symmetric/salsa20/src/: bench.rs  lib.rs  tests.rs
symmetric/sosemanuk/: Cargo.toml  rustfmt.toml
symmetric/sosemanuk/src/: consts.rs  lib.rs
utils/blockmodes/: Cargo.toml
utils/blockmodes/src/: lib.rs
utils/byte-tools/: Cargo.toml
utils/byte-utils/: Cargo.toml
utils/constant-op/: Cargo.toml
utils/constant-op/src/: lib.rs
utils/crypto-aead/: Cargo.toml
utils/crypto-aead/src/: lib.rs
utils/crypto-buffers/: Cargo.toml
utils/crypto-buffers/src/: lib.rs
utils/crypto-bytes/: Cargo.toml
utils/crypto-bytes/src/: lib.rs  tests.rs  write_ext.rs
utils/crypto-digest/: Cargo.toml
utils/crypto-digest/src/: lib.rs  test_digest.rs
utils/crypto-fixed-buffer/: Cargo.toml
utils/crypto-fixed-buffer/src/: lib.rs
utils/crypto-hmac/: Cargo.toml
utils/crypto-hmac/src/: lib.rs  tests.rs
utils/crypto-mac/: Cargo.toml
utils/crypto-mac/src/: hmac.rs  lib.rs  mac.rs
utils/crypto-mac/tests/: lib.rs
utils/crypto-ops/: Cargo.toml
utils/crypto-symmetric/: Cargo.toml
utils/crypto-symmetric/src/: lib.rs
utils/crypto-tests/: Cargo.toml
utils/crypto-tests/src/: block_cipher.rs  digest.rs  hash.rs  lib.rs
utils/digest/: Cargo.toml
utils/digest-buffer/: Cargo.toml
utils/digest-buffer/src/: lib.rs
utils/digest/src/: lib.rs
whirlpool/: Cargo.toml
whirlpool/src/: tests.rs
