[package]
name = "md5"
version = "0.0.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
crypto_bytes = {path = "../utils/crypto-bytes", default-features = false}
crypto_mac= {path = "../utils/crypto-mac", default-features = false}

[features]
default = ["use-std"]
use-std = ["crypto_bytes/use-std", "crypto_mac/use-std"]
