[package]
name = "sosemanuk"
version = "0.0.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
crypto_bytes = {path = "../utils/crypto-bytes", default-features = false}
crypto_buffers = {path = "../utils/crypto-buffers"}
crypto_symmetric = {path = "../utils/crypto-symmetric"}
