[package]
name = "whirlpool"
version = "0.0.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
crypto_bytes = {path = "../utils/crypto-bytes", default-features = false}
crypto_digest = {path = "../utils/crypto-digest", default-features = false}
crypto_fixed_buffer = {path = "../utils/crypto-fixed-buffer", default-features = false}

[features]
default = ["use-std"]
use-std = ["crypto_bytes/use-std", "crypto_digest/use-std", "crypto_fixed_buffer/use-std"]
