[package]
name = "blake2"
version = "0.0.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
crypto_bytes = {path = "../../utils/crypto-bytes", default-features = false}
crypto_digest = {path = "../../utils/crypto-digest", default-features = false}
crypto_mac = {path = "../../utils/crypto-mac", default-features = false}
crypto_ops = {path = "../../utils/crypto-ops"}

[dev-dependencies]
crypto_tests = {path = "../../utils/crypto-tests"}
