[package]
name = "blake2"
version = "0.0.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
crypto_bytes = {path = "../../utils/crypto-bytes"}
crypto_digest = {path = "../../utils/crypto-digest"}
crypto_mac = {path = "../../utils/crypto-mac"}
crypto_ops = {path = "../../utils/crypto-ops"}

[dev-dependencies]
crypto_tests = {path = "../../utils/crypto-tests"}
