[package]
name = "md5"
version = "0.1.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "MD5 hash function"
documentation = "https://docs.rs/md5"
repository = "https://github.com/RustCrypto/rust-crypto-decoupled"
keywords = ["crypto", "md5", "hash", "digest"]

[dependencies]
simd-alt = "0.2"
byte-tools = "0.1"
digest = "0.1"
digest-buffer = "0.1"
generic-array = "0.5"

[dev-dependencies]
crypto-tests = "0.1"
