[package]
name = "sha1"
version = "0.0.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
simd = {path = "../../simd"}
crypto_bytes = {path = "../../utils/crypto-bytes", default-features = false}
crypto_digest = {path = "../../utils/crypto-digest", default-features = false}
crypto_fixed_buffer = {path = "../../utils/crypto-fixed-buffer", default-features = false}

[dev-dependencies]
crypto_tests = {path = "../../utils/crypto-tests"}
