[package]
name = "sha1"
version = "0.0.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "SHA-1 hash function"
#documentation = "https://docs.rs/sha1"
repository = "https://github.com/RustCrypto/rust-crypto-decoupled"
keywords = ["crypto", "sha1", "hash", "digest"]

[dependencies]
simd-alt = "0.2"
byte-tools = "0.1"
digest = "0.1"
digest-buffer = "0.1"
generic-array = "0.5"

[dev-dependencies]
crypto-tests = "0.1"
