[package]
name = "sha2"
version = "0.0.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
simd = {path = "../../simd"}
crypto_bytes = {path = "../../utils/crypto-bytes"}
crypto_digest = {path = "../../utils/crypto-digest"}
crypto_fixed_buffer = {path = "../../utils/crypto-fixed-buffer"}
generic-array = "0.5"

[dev-dependencies]
crypto_tests = {path = "../../utils/crypto-tests"}
