[package]
name = "sha3"
version = "0.0.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
crypto_bytes = {path = "../../utils/crypto-bytes"}
crypto_digest = {path = "../../utils/crypto-digest"}

[dev-dependencies]
crypto_tests = {path = "../../utils/crypto-tests"}
