[package]
name = "sha3"
version = "0.1.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "SHA-3 (Keccak) hash function"
documentation = "https://docs.rs/sha3"
repository = "https://github.com/RustCrypto/rust-crypto-decoupled"
keywords = ["crypto", "sha3", "keccak", "hash", "digest"]

[dependencies]
crypto_bytes = {path = "../../utils/crypto-bytes"}
crypto_digest = {path = "../../utils/crypto-digest"}

[dev-dependencies]
crypto_tests = {path = "../../utils/crypto-tests"}
