[package]
name = "byte-tools"
version = "0.1.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "Utility functions for working with bytes"
documentation = "https://docs.rs/byte-tools"
repository = "https://github.com/RustCrypto/rust-crypto-decoupled"
keywords = ["bytes"]
