[package]
name = "constant_op"
version = "0.0.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
build = "build.rs"

[dependencies]
libc = {version = "^0.2", default-features = false}

[build-dependencies]
gcc = "^0.3"

[features]
default = ["use-std"]
use-std = ["libc/use_std"]