[package]
name = "crypto_hmac"
version = "0.0.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
crypto_digest = {path = "../crypto-digest"}
crypto_bytes = {path = "../crypto-bytes"}
crypto_mac = {path = "../crypto-mac"}

#[dev-dependencies]
#md5 = {path = "../../hash/md5"}

[features]
default = ["use-std"]
use-std = []
