[package]
name = "crypto-mac"
version = "0.1.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "Cryptographic MAC trait and HMAC implementation"
documentation = "https://docs.rs/crypto-mac"
repository = "https://github.com/RustCrypto/hashes"
keywords = ["crypto", "mac", "hmac", "digest"]

[dependencies]
generic-array = "0.5"
crypto-ops = "0.1"
byte-tools = "0.1"
digest = "0.2"

#[dev-dependencies]
#md5 = {path="../../hash/md5"}