[package]
name = "crypto_tests"
version = "0.0.1"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"

[dependencies]
rand = {version = "0.3", optional = true}
crypto_digest = {path = "../crypto-digest", default-features = false}

[features]
default = ["use-std"]
use-std = ["rand", "crypto_digest/use-std"]
