[package]
name = "crypto-tests"
version = "0.2.4"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "Test helpers for cryptographic algorithms"
documentation = "https://docs.rs/crypto-tests"
repository = "https://github.com/RustCrypto/rust-crypto-decoupled"
keywords = ["crypto", "tests"]

[dependencies]
digest = "0.3"
generic-array = "0.5"
block-cipher-trait = "0.2"
