[package]
name = "digest"
version = "0.1.0"
authors = ["The Rust-Crypto Project Developers"]
license = "MIT/Apache-2.0"
description = "Digest trait for cryptographic hash functions"
documentation = "https://docs.rs/crate/digest"
repository = "https://github.com/RustCrypto/rust-crypto-decoupled"
keywords = ["digest", "crypto", "hash"]

[dependencies]
generic-array = "0.5"